Fixed bug #47893 (CLI aborts on non blocking stdout)